--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display&display=swap" rel="stylesheet" />
 
     <title>Bootstrap : Frontend Mentor</title>
+
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
   </head>
   <body class="font-red-hat">
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -42,5 +52,12 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by <a href="#">Naman Avasthi</a>.
+    </div>
   </body>
 </html>
