few folks commented that i should use semantic html, sigh! here you go

--- a/public/index.html
+++ b/public/index.html
@@ -53,11 +53,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io/challenges/order-summary-component-QlPmajDUj" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Naman Avasthi</a>.
-    </div>
+    </footer>
   </body>
 </html>
